# Normativa_UBU

./: README.md  sonar-project.properties
prototipos/: .gitignore  BaseDatos.py  BaseDatosPromp.py  PliegosPlaywright.py  PliegosPlaywrightAsincrono.py  PliegosSelenium.py  Prompt.py  PruebaBaseDatos.py  README.md  pyproject.toml  requirements.txt  resultados_playwright.json  resultados_playwright_asincrono.json  script_tokenize.py  script_tokenize_segundoModelo.py
prototipos/Flask/: .dockerignore  Dockerfile.qdrant  app.db  docker-compose.yml  entrypoint.sh  forms.py  requirements.txt  run.py  usuario.py
prototipos/Flask/app/: __init__.py  consulta.py  documentos.py  forms.py  usuario.py  vector_update_state.py  web_scraping_state.py
prototipos/Flask/templates/: admin_documents.html  base.html  history.html  index.html  login.html  pag_principal.html  singup.html  tabla_historial.html  users.html
prototipos/Flask/tests/: base.py  test_admin.py  test_forms.py  test_init.py  test_main.py  test_user.py
prototipos/Flask_docker/: .gitignore  docker-compose.yml  requirements_docker.txt
prototipos/Flask_docker/app/: __init__.py  async_tasks.py  documentos.py
prototipos/Flask_docker/templates/: index.html  login.html
prototipos/Flask_docker/tests/: test_forms.py  test_main.py  test_vector_update_state.py
prototipos/Markdown/: Intento1_Markdown.py  Markdown_Ocr.py  Markdown_Ollama.py  README.md  pyproject.toml
prototipos/Markdown/markdown/: 1E_23__Pliego Cláusulas Administrativas_2.md  (+1 more)
prototipos/Web Scraping/: readme.md
prototipos/qdrant_data/: meta.json
(+242 files in other folders)
