[tool.poetry]
name = "markdown"
version = "0.1.0"
description = ""
authors = ["lbr1014 <lbr1014@alu.ubu.es>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"